=======
Changes in version 3.10 - <TOBEDONE>.
-------------------------------

These release introduce a feature that allows to provide a custom ImageWorker. It allows to generate
native SVG images using any SVG library. There is a sample implementation org.rrd4j.graph.SVGImageWorker in the test code.

* PR 162: Make RRD DB closing idempotent when used with a pool
* PR 161: Prevent excess RrdBackend.close() invocation
* PR 164: Add current file name to window title of RRD File Inspector
* PR 166: ImageWorker rendering improvements
* PR 168: Upgrade to mongodb-java-sync

=======
Changes in version 3.9 - 14 aug 2023.
-------------------------------

These release includes two minor breaking changes.
* Lots of useless thrown exceptions were removed, even in a few public API.
* module name is now explicit, not derived from the file name.

* PR 157: Use correct fonts when calculating limits
* PR 156: Omit redundant fractional part on y-axis labels
* PR 155: Avoid y-axis label corruption when using large axis font
* PR 154: AXIS font was used instead of UNIT font
* PR 153: Fix slow RrdGraph generation with big data sets

=======
Changes in version 3.8.2 - 14 oct 2022.
-------------------------------

* Fixed Issue 152: rrdDef.getPath() Does not return correct path in case of Windows machine.

=======
Changes in version 3.8.1 - 26 dec 2021.
-------------------------------

As bintray is now closed, publication is done using Sonatype OSSRH. The keys used to sign package are listed in the KEYS
file.

* Fixed Issue 144: Unable to delete the image file.

=======
Changes in version 3.8 - 8 dec 2020.
-------------------------------

Slightly improving time parser, with better tests. 4 digits year can now be any year. For two digits year, 38 is used as a pivot. Before that, it means 20xx, after 19xx.

Extending SI prefixes to the set: 'y', 'z', 'a', 'f', 'p', 'n', 'µ', 'm', ' ', 'k', 'M', 'G', 'T', 'P', 'E', 'Z', 'Y'
