@@ -5,6 +5,10 @@ Changes in version 3.10 - <TOBEDONE>.
 These release introduce a feature that allows to provide a custom ImageWorker. It allows to generate
 native SVG images using any SVG library. There is a sample implementation org.rrd4j.graph.SVGImageWorker in the test code.
 
+The mongoDb backend is now splitter in two factory. The old driver, org.rrd4j.core.RrdMongoDBBackendFactory needs the old
+mongodb-driver-legacy in version 3. The new one org.rrd4j.core.RrdMongoDBNewBackendFactory uses the latest mongodb-driver-sync.
+As they both use the same scheme (mongodb), it’s not a good idea to register both at the same time.
+
 * PR 162: Make RRD DB closing idempotent when used with a pool
 * PR 161: Prevent excess RrdBackend.close() invocation
 * PR 164: Add current file name to window title of RRD File Inspector
